# GBuildAssistant

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt  help.txt
GBuildAssistant/: CMakeLists.txt  app.cpp  debug.cpp
GBuildAssistant/include/: app.hpp
GBuildAssistant/include/gba/: app.hpp  debug.hpp
cmake/: ImGuiBackends.cmake  RunConan.cmake  StaticAnalyzers.cmake
conan_packages/imgui-glad-gles3/: CMakeLists.txt  conanfile.py
conan_packages/imgui-glad-glfw/: CMakeLists.txt  conanfile.py
conan_packages/imgui-glad-opengl3/: CMakeLists.txt  conanfile.py
demos/: CMakeLists.txt  running_gba_app.cpp
dev_examples/: CMakeLists.txt  draw_triangles_gles.cpp  imgui_triangles.cpp  imgui_triangles_gles.cpp  transparent_box.cpp  triangles.cpp  triangles_gles.cpp
saved_unused_files/: CMakeOptions.txt  backup.txt  conanfile.py  conanfile.txt
src/: CMakeLists.txt  main.cpp
